# rust_backblaze_b2_api_async_plain

./: .travis.yml  Cargo.toml  README.md
examples/: all_calls.rs  b2_authorize_account.rs  b2_download_file_by_id.rs  b2_get_upload_url.rs  b2_list_buckets.rs  b2_list_file_names.rs  b2_upload_file.rs  b2_upload_file_parts.rs
src/: http_range_serializer.rs  lib.rs  v2.rs
src/header_serializer/: header_serializer.rs  mod.rs  serde_header_serializer.rs
src/header_serializer/serde_header_serializer/: url_encoder.rs
src/v2/: b2_authorize_account.rs  b2_cancel_large_file.rs  b2_copy_file.rs  b2_copy_part.rs  b2_create_bucket.rs  b2_create_key.rs  b2_delete_bucket.rs  b2_delete_file_version.rs  b2_delete_key.rs  b2_download_file_by_id.rs  b2_download_file_by_name.rs  b2_finish_large_file.rs  b2_get_download_authorization.rs  b2_get_file_info.rs  b2_get_upload_part_url.rs  b2_get_upload_url.rs  b2_hide_file.rs  b2_list_buckets.rs  b2_list_file_names.rs  b2_list_file_versions.rs  b2_list_keys.rs  b2_list_parts.rs  b2_list_unfinished_large_files.rs  b2_start_large_file.rs  b2_update_bucket.rs  b2_update_file_legal_hold.rs  b2_update_file_retention.rs  b2_upload_file.rs  b2_upload_part.rs  buckets.rs  capabilities.rs  common_structs.rs  errors.rs  file.rs  file_lock.rs  file_part.rs  json_api.rs  server_side_encryption.rs  test.rs
src/v2/file/: content_language.rs
src/v2/json_api/: b2_authorize_account.rs  b2_list_buckets.rs  common_structs.rs
src/v2/test/: mock_server.rs
