[package]
name = "backblaze_b2_async_plain"
version = "0.1.0"
authors = ["dev"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.8"
serde_json = "1.0"
serde_urlencoded = "0.7"
reqwest = { version = "0.11", features = ["json", "stream"] }
tokio = { version = "1", features = [] }
http-types = "2.10"
typed-builder = "0.9.0"
http-range = "0.1.4"
http = "0.2.4"
enumset = { version="1.0", features=["serde"] }
lazy_static = "1.4.0"


[dev-dependencies]
tokio = { version = "1", features = ["macros", "fs", "io-util", "io-std", "rt-multi-thread"] }
wiremock = "0.5"
base64 = "0.13"
textwrap = "0.14.2"
http-auth-basic = "0.3.1"
structopt = "0.3.21"
home = "0.5.3"
sha1 = "0.6.0"
tokio-util = {version = "0.6.7", features = ["io"] }
num-integer = "0.1"

[[example]]
name = "b2_authorize_account"

[[example]]
name = "b2_list_buckets"

[[example]]
name= "b2_download_file_by_id"